목록 삭제 버트 눌렀을때 기능 구현 완료/ redirectAttribute 추가

--- a/src/main/webapp/resources/css/admin_inquiry_write_page.css
+++ b/src/main/webapp/resources/css/admin_inquiry_write_page.css
@@ -281,7 +281,7 @@ ul.bottom-btns>li>button{
   font-weight: 500;
   flex-shrink: 0;
 }
-ul.bottom-btns>li>button:not([type="submit"]){
+ul.bottom-btns>li>button:not([type]){
   background-color: #FFFFFF;
   border: 1px solid #EAECF0;
 }
