--- a/src/main/webapp/resources/css/mypage_matching_alarm_keyword_list_page.css
+++ b/src/main/webapp/resources/css/mypage_matching_alarm_keyword_list_page.css
@@ -1,4 +1,3 @@
-@charset "UTF-8";
 .main-body {
 	width: 1220px;
 }
@@ -8,57 +7,244 @@ a:hover{
 	color: #0066ff;
 }
 
-/* 물건 */
+#item-image-value{
+	
+	 width: 120px;
+	 height: 120px;
+	 margin-top: 15px; 
+	 margin-bottom: 10px;
+	 border-radius: 20px;
+}
+
+/* 키워드 */
+.registrationed_alarm {
+    display: flex ;
+    text-align: left;
+    font-size: 15px;
+    padding-left: 5px;
+}
+.registrationed_alarm_keywords_list {
+	margin-top: 10px;
+    display: flex;
+    text-align: left;
+}
 .item_tag_01 {
-   font-weight: bold;
-   background-color: #F7E8FF;
-   color: #8910D9;
-   border-radius: 30%;
-   margin-left: 50px;
-   margin-right: 60px;
+	font-weight: bold;
+	background-color: #F7E8FF;
+	color: #8910D9;
+	border-radius: 100px;
+	padding : 4px 6px 4px 6px;
+	margin-right: 40px;
 }
 
-/* 에어팟 */
 .item_tag_02 {
-   font-weight: bold;
-   background-color: #E8F1FF;
-   color: #0250EC;
-   border-radius: 30%;
+	font-weight: bold;
+	background-color: #E8F1FF;
+	color: #0250EC;
+	border-radius: 100px;
+	padding : 4px 6px 4px 6px;
+	margin-right: 40px;
 }
 
-
-/* 2024-03-06시경 */
 .item_tag_03 {
-   font-weight: bold;
-   background-color: #FFE5E8;
-   color: #D20319;
-   border-radius: 30%;
+	font-weight: bold;
+	background-color: #FFE5E8;
+	color: #D20319;
+	border-radius: 100px;
+	padding : 4px 6px 4px 6px;
+	margin-right: 40px;
 }
 
-
-/* 전자기기 > 무선이어폰 */
 .item_tag_04 {
-   font-weight: bold;
-   background-color: #FFEFE4;
-   color: #EE5800;
-   border-radius: 30%;
+	font-weight: bold;
+	background-color: #FFEFE4;
+	color: #EE5800;
+	border-radius: 100px;
+	padding : 4px 6px 4px 6px;
+	margin-right: 40px;
 }
 
-
-/* 월게,이마트,트레이더스 */
 .item_tag_05 {
-   font-weight: bold;
-   background-color: #D8F7E6;
-   color: #00692A;
-   border-radius: 30%;
-   color: blue;
-   text-align: right;
+	font-weight: bold;
+	background-color: #D8F7E6;
+	color: #00692A;
+	border-radius: 100px;
+	padding : 4px 6px 4px 6px;
+}
+
+/* 검색창 프레임 */
+
+.searchbar-container {
+  /* background-color: aquamarine; */
+  padding-top: 1rem;
+  align-self: stretch;
+  padding: 0px 30px;
+}
+
+.searchbar-container form {
+  display: flex;
+  flex-direction: column;
+}
+/*날짜 선택 버튼  */
+.form-date-btn:hover {
+  cursor: pointer;
+}
+.form-date-btn {
+  background: #fafafa;
+  border-radius: 12px;
+  border-style: solid;
+  border-color: #d6e6fe;
+  border-width: 1px;
+  padding: 8px 16px;
+  display: flex;
+  flex-direction: row;
+  gap: 10px;
+  align-items: center;
+  justify-content: center;
+  flex-shrink: 0;
+  position: relative;
+  cursor: poninter;
+}
+.div-placeholder {
+  display: flex;
+  flex-direction: row;
+  align-items: center;
+  justify-content: center;
+  flex-shrink: 0;
+  position: relative;
+}
+.div {
+  color: #000000;
+  text-align: left;
+  font-size: 16px;
+  line-height: 20px;
+  font-weight: 400;
+  position: relative;
+}
+
+.searchbar-mutil-group {
+  display: flex;
+  flex-wrap: wrap;
+}
+
+.searchbar-select-group {
+  display: flex;
+  /* position: relative; */
+  justify-content: space-between; 
+  margin-bottom: 30px;
+}
+
+.searchbar-title {
+  width: 7.5rem;
+  display: flex;
+  flex-shrink: 0;
+  align-items: center;
+}
+
+.searchbar-title>span {
+  padding: 0.8rem 1rem;
+  /* text-decoration: underline;
+  font-weight: 400; */
+}
+
+.searchbar-content {
+  display: flex;
+  align-items: center;
+  flex-wrap: wrap;
+  margin-right: 1rem;
+  gap: 10px;
+  /* justify-content: flex-start; */
+}
+
+.searchbar-content>span {
+  padding: 0.8rem 1rem;
+
+}
+
+.searchbar-content>input {
+  padding: 0.5rem 1rem;
+  border-radius: 10px;
+  font-size: 0.8rem;
+  border-width: 0.0625rem;
+  font-family: "Noto Sans KR", sans-serif;
+  box-shadow: none;
+}
+
+.searchbar-content>select {
+  padding: 0.5rem 1rem;
+  border-radius: 10px;
+  font-size: 0.8rem;
+  font-family: "Noto Sans KR", sans-serif;
+  border-width: 0.0625rem;
+}
+.searchbar-title>select {
+  padding: 0.5rem 1rem 0.5rem 0.2rem ;
+  margin-left: 1rem;
+  border-radius: 10px;
+  font-size: 0.8rem;
+  font-family: "Noto Sans KR", sans-serif;
+  border-width: 0.0625rem;
+}
+
+.search-btn-block {
+  margin-top: 1rem;
+  border-top: 0.0625rem solid #EAECF0;
+  padding: 0.5rem 0;
+  display: flex;
+  justify-content: center;
+  gap: 15px;
+}
+
+.search-btn-block>button:hover {
+  cursor: pointer;
+}
+
+.search-btn-block>button:not([class]) {
+  background: #0066ff;
+  border-radius: 8px;
+  padding: 10px 16px;
+  display: flex;
+  gap: 10px;
+  align-items: center;
+  justify-content: center;
+  flex-shrink: 0;
+  position: relative;
+  color: #ffffff;
+  border-style: none;
+  font-size: 15px;
+  line-height: 18px;
+  font-weight: 400;
+}
+	/*검색 초기화 버튼  */
+	.reset {
+  border-radius: 8px;
+  padding: 10px 16px;
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  flex-shrink: 0;
+  position: relative;
+  border: 1px solid #D0D5DD;
+  font-size: 15px;
+  line-height: 18px;
+  font-weight: 400;
+}
+.div {
+  color: #606060;
+  text-align: left;
+  font-size: 15px;
+  font-weight: 400;
+  position: relative;
+  align-items: center;
 }
 
 /* table */
 .content-wrapper {
 	display: flex;
 	justify-content: center;
+}
+.searchbar-container{
+	width: 1160px;
 }
 
 .content-container {
@@ -68,13 +254,29 @@ a:hover{
 	box-shadow: 0px 2px 2px 0px rgba(0, 0, 0, 0.14), 0px 2px 6px 0px
 		rgba(0, 0, 0, 0.14), 0px 2px 2px 0px rgba(0, 0, 0, 0.14);
 }
+/*테이블 상단 캡션  */
+.table-caption-wrapper{
+   display: flex;
+   justify-content: space-between; 
+   
+}
+.talbe-caption-container{
+   display: flex;
+	align-items: center; 
+   
+}
+.table-caption{
+   padding-left: 15px;
 
+}
+span.caption-total{
+   color: #0066ff;
+}
 .list-control-container {
-	height: 83px;
-	width: 1160px;
-	display: flex;
-	align-items: center;
-	justify-content: flex-end;
+   height: 83px;
+   display: flex;
+   align-items: center;
+   
 }
 
 .btn-list {
@@ -100,9 +302,10 @@ a:hover{
 
 #btn-write {
 	margin-right: 10px;
-	background-color: #F9F5FF;
-	color: #6941C6;
+	background-color: white;
+	color: black;
 	font-family: inherit;
+	border: 1px solid #D8D8D8;
 }
 
 .info-table {
@@ -128,8 +331,11 @@ a:hover{
 
 }
 .table-title{
-	width: 600px;
+	width: 900px;
+	padding-left: 20px;
+    text-align: left;
 }
+
 .info-table td {
 	background-color: white;
 	font-size: 14px;
@@ -168,13 +374,10 @@ input[type="checkbox"]:hover {
 	width: 40px;
 	height: 40px;
 }
-
 /* page */
 .result-container {
-	width: 1180px;
-	margin-left: auto;
-	margin-right: auto;
-	margin-top: 59px;
+   width: 1180px;
+   margin : 59px auto;
 }
 .page-container {
   font-size: calc(1rem*14/16);
@@ -237,166 +440,40 @@ ul.switchBtn-container {
 
 ul.switchBtn-container>li {
   margin-right: 1rem;
+  width : 77px;
+  flex-shrink: 0;
+  flex-basis :77px;
 }
 
 ul.switchBtn-container>li>a {
-  display: inline-block;
+  display: block;
   border-radius: 8px;
   padding: 0.3em 0.6em;
   border: 1px solid #D0D5DD;
+  text-align: center;
 }
 
-
-
-
-/* 0408_원진호추가 */
-.show_item_name{
-	text-align: left;
-	margin-left: 50px;
+/* 현재페이지인 a태그에 색상 표시 */
+ul.pagelist-container>li:not([class]) span.currpage {
+    display: inlinblock;
+    color: #0066ff;
+    padding: 0.5em;
 }
-
-
-.show_item_info{
-	display: flex;
-    justify-content: space-between;
-	
-}
-
-.show_item_list_title{
-	display: flex;
-	justify-content: flex-start;
-	margin-left:50px;
-}
-
-
-/* 원진호_0408_버튼&검색창 CSS추가 */
-.page_root {
-	line-height: 50px;
-	text-align: right;
-	margin-right: 25px;
-}
-
-.border_01 {
-	display: flex;
-	margin-left: 25px;
-	/* justify-content: space-between; */
-}
-
-.btn-set {
-	display: flex;
-	justify-content: flex-start;
-	margin-right: auto;
-	/* weon_0410추가 */
-	background-color: white;
-}
-
-
-.view_all_btn {
-	width: 87px;
-	cursor: pointer;
-	background-color: white;
-} 
-
-.item_btn {
-	width: 87px;
-	cursor: pointer;
-	background-color: white;
-}
-
-.ani_btn {
-	width: 87px;
-	cursor: pointer;
-	background-color: white;
-}
-
-.keyword_list_btn {
-	width: 87px;
-	cursor: pointer;
-	background-color: white;
-}
-
-.set_02 {
-	display: flex;
-	justify-content: flex-end;
-	margin-left: auto;
-	margin-right: 25px;
-}
-
-
-
-.searchbar-content>select {
-	padding: 0.5rem 1rem;
-	border-radius: 10px;
-	font-size: 0.8rem;
-	font-family: "Noto Sans KR", sans-serif;
-	border-width: 0.0625rem;
-}
-
-select {
-	margin-right: 20px;
-}
-
-.search {
-	position: relative;
-	width: 300px;
-}
- 
-.searchbar-container {
-	padding-top: 1rem;
-} 
-
-
-.search_bar {
-	width: 300px;
-	border: 1px solid #bbb;
+#btn-search {
 	border-radius: 8px;
- 	padding: 10px 12px;  
-	font-size: 14px;
-}
-
-.search_icon {
-	position: absolute;
-	width: 17px;
-	top: 10px;
- 	right: 12px; 
-	margin: 0;
-	cursor: pointer;
-}
-
-.alarm_delete {
-	width: 100px;
+	padding: 6px 14px;
+	display: flex;
+	flex-direction: row;
+	gap: 10px;
+	align-items: center;
+	justify-content: center;
+	flex-shrink: 0;
+	position: relative;
+	color: #ffffff;
+	border-style: none;
+	margin-right: 10px;
 	background-color: white;
-	border-radius: 10px;	
-	margin-left: 50px;
-	cursor: pointer;
+	color: black;
+	font-family: inherit;
+	border: 1px solid #D8D8D8;
 }
-
-
-.alarm_delete span{
-	text-align: center;
-	font-size: 14px;
-}
-
-
-
-.registrationed_alarm_keywords {
-	line-height: 50px;
-	margin-left: 30px; 
-	
-}
-
-#trash_can_icon{
-	background-color: white;
-	border: none;
-}
-
-
-#select_content{
-	border-radius: 10px;
-}
-
-
-
-
-
-
